assets/stylesheets/common/discourse-calendar.scss
.discourse-calendar-wrap {
  margin: 0.5em 0;
  border: 5px solid $primary-low;
}

.category-calendar .calendar {
  height: 400px;
  overflow-y: scroll;
}

.before-topic-list-body-outlet.category-calendar {
  display: table-caption;
}

.calendar {
  height: 645px; // Must be fixed to prevent height change on load
  border: 0;

  &.fc-unthemed {
    tbody,
    thead,
    tr {
      border: none;

      td.fc-widget-content,
      td.fc-widget-header {
        border-left: 0;

        &:last-child {
          border-right: 0;
        }
      }
    }

    .fc-basic-view .fc-day-top .fc-day-number {
      float: left;
    }

    .fc-bg td.fc-today {
      background-color: $highlight-medium;
      border-style: solid;
    }

    .fc-month-view .fc-widget-content,
    .fc-basicWeek-view .fc-widget-content,
    .fc-head-container {
      padding: 0;
    }

    .fc-bg tbody {
      border-width: 0;
    }

    .fc-header-toolbar {
      padding: 0.5em 0.5em 0 0.5em;
    }

    .fc-title {
      // TODO: use @include ellipsis after stable is 2.4+
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;

      display: block;
    }

    .fc-widget-header span {
      padding: 3px 3px 3px 0.5em;
    }

    .fc-center {
      display: none;
    }

    .fc-button {
      border-radius: 0;
      box-shadow: none;
      background: $primary-low;
      text-transform: capitalize;
      color: $primary;
      text-shadow: none;
      border: none;
      padding: 6px 12px;

      &:hover {
        background: $primary-medium;
        color: $secondary;
      }

      &.fc-state-active {
        background: $tertiary;
        color: $secondary;
      }
    }

    .fc-button-group {
      // margin-right: 0;
      .fc-button {
        margin: 0;
      }
    }

    .fc-divider,
    .fc-list-empty,
    .fc-list-heading td,
    .fc-popover .fc-header {
      background: $primary-low;
    }

    .fc-content,
    .fc-divider,
    .fc-list-heading td,
    .fc-list-view,
    .fc-popover,
    .fc-row,
    tbody,
    td,
    th,
    thead {
      border-color: $primary-low;
    }
  }

  .fc-event,
  .fc-event-dot {
    background-color: $tertiary;
    border: 1px solid transparent;

    .fc-time {
      display: none;
    }

    &.grouped-event {
      background-color: $primary-low;
      border: 1px solid $primary-low-mid;
      color: $primary;

      .emoji {
        margin-right: 0.25em;
      }
    }
  }

  .fc-left {
    .fc-button-group:first-child {
      margin-left: 0;
    }
  }
  .fc-list-item-add-to-calendar {
    color: $tertiary;
    font-size: $font-down-1;
  }
}

.mention .d-icon {
  margin-left: 0.5em;
}

a.holiday {
  cursor: default;
}

.combo-box.user-timezone {
  min-width: 15em;
}

.discourse-calendar-header {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  padding: 0.5em;
  border-bottom: 1px solid $primary-low;
  background: $primary-very-low;
  min-height: 60px;

  .discourse-calendar-timezone-picker {
    margin-bottom: 0;
  }

  h2.discourse-calendar-title {
    margin: 0 !important;
  }

  .title {
    font-weight: 700;
    text-transform: capitalize;
  }
}

.discourse-calendar-header .discourse-calendar-timezone-picker {
  max-width: 50vw;
  font-size: 16px;
}

$bg-normal: dark-light-choose(lighten($tertiary, 55%), darken($tertiary, 25%));
$bg-close-to-working-hours: dark-light-choose(
  desaturate(lighten($tertiary, 45%), 15%),
  darken($tertiary, 15%)
);
$bg-in-working-hours: dark-light-choose(
  desaturate(lighten($tertiary, 40%), 20%),
  darken($tertiary, 10%)
);

.group-timezones {
  display: flex;
  width: 100%;
  box-sizing: border-box;
  flex-direction: column;

  &[data-size="auto"],
  &.auto {
    height: auto;
  }

  &[data-size="small"],
  &.small {
    height: 175px;
  }

  &[data-size="medium"],
  &.medium {
    height: 300px;
  }

  &[data-size="large"],
  &.large {
    height: 600px;
  }
}

.group-timezones-header {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 0.5em;
  box-sizing: border-box;

  .title {
    font-weight: bold;
    text-transform: capitalize;
  }
}

.group-timezones-time-traveler {
  display: flex;
  align-items: center;

  .time {
    font-weight: 700;
    margin-right: 0.5em;
  }
}

.mobile-view .group-timezones-time-traveler,
.mobile-view .group-timezones-filter {
  display: none;
}

.group-timezones-slider {
  width: 120px;
  margin: 0.25em 0;
  padding: 0.25em;
  -webkit-appearance: none;
  -moz-appearance: none;
  cursor: pointer;
  font: inherit;
  outline: none;
  color: #069;
  opacity: 0.8;
  background: svg-uri(
      "<svg xmlns='http://www.w3.org/2000/svg' width='2' height='2'><rect fill='#{$tertiary}' x='0' y='0' width='2' height='2'/></svg>"
    )
    50% 50% repeat-x;
  box-sizing: border-box;
  transition: opacity 0.2s;
}

.group-timezones-body {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
  grid-template-rows: auto;
  grid-gap: 0.25em;
  box-sizing: border-box;
  overflow-y: auto;

  .group-timezones-header {
    .title {
      font-weight: 700;
    }
  }

  .group-timezone,
  .group-timezone-new-day {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    padding: 0.25em;
  }

  .group-timezone-new-day {
    align-items: center;
    justify-content: space-between;
    color: inherit;
    font-size: $font-down-1;

    .before {
      margin-right: auto;
      text-transform: capitalize;
    }

    .after {
      margin-left: auto;
      text-transform: capitalize;
    }
  }

  .group-timezone {
    color: $primary;
    background-color: $bg-normal;
    transition: opacity 0.4s;
    opacity: 0.5;

    &:first-child {
      margin-left: 0;
    }

    &:last-child {
      margin-right: 0;
    }

    &.close-to-working-hours {
      background-color: $bg-close-to-working-hours;
      opacity: 0.7;
    }

    &.in-working-hours {
      background-color: $bg-in-working-hours;
      opacity: 1;
    }

    &:hover {
      opacity: 1;
    }

    .info {
      display: flex;
      flex-direction: row;
      align-items: center;

      .time {
        font-weight: 700;
      }

      .offset {
        font-size: $font-down-2;
        margin-left: 0.5em;
      }
    }

    .group-timezones-members {
      padding: 0;
      margin: 0.1em 0;

      .group-timezones-member {
        &.on-holiday {
          opacity: 0.4;
        }

        margin: 0.1em;
        list-style: none;
        display: inline-block;
      }
    }
  }
}

.group-timezones-reset {
  display: flex;
  margin-left: 0.5em;
}

.group-timezones-filter[type="text"] {
  margin: 0;
  width: 120px;
}

